fixed expand/collapse bugs and removed graph highlighting on input_con_files

--- a/refinery/static/styles/css/workflow_visualization.css
+++ b/refinery/static/styles/css/workflow_visualization.css
@@ -66,7 +66,7 @@
 	cursor: default;
 }
 
-.inputConRect, .inputConRectTitle, .fileIconInputConCircle, .fileIconOutputCircle, .fileIconInputCircle, .outRectCircleG, .inRectCircleG, .inputConRectCircleG {
+.inputConRect, .inputConRectTitle, .fileIconInputConCircle, .fileIconOutputCircle, .fileIconInputCircle, .outRectcircleG, .inRectCircleG, .inputConRectCircleG, .outRectTitle, .outputRect, .inputRectTitle, .inputRect, .outRectCircle{
 	cursor: pointer;
 }
 
